--- a/app/src/main/res/layout/fragment_movie_about.xml
+++ b/app/src/main/res/layout/fragment_movie_about.xml
@@ -22,7 +22,7 @@
             android:layout_height="match_parent">
 
 
-            <com.borjabravo.readmoretextview.ReadMoreTextView
+            <com.indisparte.morelesstextview.MoreLessTextView
                 android:id="@+id/readMoreTextV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -31,10 +31,11 @@
                 android:layout_marginEnd="10dp"
                 android:textColor="@color/alabaster"
                 android:textSize="14sp"
-                app:colorClickableText="@color/vermilion_100"
-                app:loadText="@{movie.overview}"
-                app:trimLength="200"
-                app:trimMode="trimModeLength"
+                app:clickableColor="@color/vermilion_100"
+                android:maxLines="2"
+                android:text="@{movie.overview}"
+                app:readLessText="Read less"
+                app:readMoreText="Read more"
                 tools:text="@tools:sample/lorem/random" />
 
             <com.indisparte.horizontalchipview.HorizontalChipView
@@ -43,10 +44,10 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/readMoreTextV"
                 android:padding="10dp"
+                app:title="Genres"
                 app:titleColor="@color/alabaster"
                 app:titleSize="18sp"
-                app:titleStyle="bold"
-                app:title="Genres" />
+                app:titleStyle="bold" />
 
             <include
                 android:id="@+id/movie_info"
