--- a/app/src/main/res/layout/layout_movie_info.xml
+++ b/app/src/main/res/layout/layout_movie_info.xml
@@ -18,7 +18,6 @@
             android:id="@+id/textTitleInfo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:text="Info"
             android:textColor="@color/alabaster"
@@ -32,6 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             app:hideIfValueEmpty="true"
+            app:textSize="14sp"
             app:textColor="@color/alabaster"
             app:title="Original title"
             app:value="@{movie.originalTitle}" />
@@ -42,6 +42,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             app:hideIfValueEmpty="true"
+            app:textSize="14sp"
             app:textColor="@color/alabaster"
             app:title="Status"
             app:value="@{movie.status}" />
@@ -52,6 +53,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             app:hideIfValueEmpty="true"
+            app:textSize="14sp"
             app:textColor="@color/alabaster"
             app:title="Runtime"
             app:value="@{movie.runtime}" />
@@ -63,6 +65,7 @@
             android:layout_marginBottom="10dp"
             app:hideIfValueEmpty="true"
             app:textColor="@color/alabaster"
+            app:textSize="14sp"
             app:title="Original language"
             app:value="@{movie.originalLanguage}" />
 
@@ -72,6 +75,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             app:hideIfValueEmpty="true"
+            app:textSize="14sp"
             app:textColor="@color/alabaster"
             app:title="Budget"
             app:value="@{movie.budget}" />
@@ -82,6 +86,7 @@
             android:layout_height="wrap_content"
             app:hideIfValueEmpty="true"
             app:textColor="@color/alabaster"
+            app:textSize="14sp"
             app:title="Revenue"
             app:value="@{movie.revenue}" />
 
