--- a/MoreLessTextView/src/main/res/values/attrs.xml
+++ b/MoreLessTextView/src/main/res/values/attrs.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="MoreLessTextView">
+        <attr name="maxLinesShown" format="integer"/>
         <attr name="readMoreText" format="string" />
         <attr name="readLessText" format="string" />
         <attr name="clickableColor" format="color" />
