--- a/app/src/main/res/layout/fragment_tv_about.xml
+++ b/app/src/main/res/layout/fragment_tv_about.xml
@@ -31,7 +31,7 @@
             tools:context=".ui.ui.details.movie.MovieInfoFragment">
 
 
-            <com.borjabravo.readmoretextview.ReadMoreTextView
+            <com.indisparte.morelesstextview.MoreLessTextView
                 android:id="@+id/readMoreTextV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -40,11 +40,12 @@
                 android:layout_marginEnd="10dp"
                 android:textColor="@color/alabaster"
                 android:textSize="14sp"
-                app:colorClickableText="@color/vermilion_100"
-                app:loadText="@{tv.overview}"
-                app:trimLength="200"
-                app:trimMode="trimModeLength"
-                tools:text="@tools:sample/lorem/random" />
+                app:clickableColor="@color/vermilion_100"
+                app:maxLinesShown="2"
+                android:text="@{tv.overview}"
+                app:readLessText="Read less"
+                app:readMoreText="Read more"
+                tools:text="@tools:sample/lorem" />
 
 
             <com.indisparte.horizontalchipview.HorizontalChipView
