--- a/PosterView/src/main/res/values/attrs.xml
+++ b/PosterView/src/main/res/values/attrs.xml
@@ -2,11 +2,14 @@
 <resources>
     <declare-styleable name="PosterView">
         <attr name="placeholder" format="reference" />
-        <attr name="rating" format="float" />
+        <attr name="rating" format="string" />
         <attr name="imageSrc" format="string" />
         <attr name="title" format="string"/>
-        <attr name="titleColor" format="reference"/>
+        <attr name="titleColor" format="color"/>
         <attr name="titleSize" format="dimension"/>
-        <attr name="ratingColor" format="reference"/>
+        <attr name="titleStyle" format="enum">
+
+        </attr>
+        <attr name="ratingColor" format="color"/>
     </declare-styleable>
 </resources>
