Update Views With new PosterView.kt

--- a/app/src/main/res/layout/fragment_episode_group_details.xml
+++ b/app/src/main/res/layout/fragment_episode_group_details.xml
@@ -31,6 +31,7 @@
             android:orientation="vertical"
             app:textColor="@color/alabaster"
             app:hideIfValueEmpty="true"
+            app:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/toolbar"
