--- a/app/src/main/res/layout/fragment_season_details.xml
+++ b/app/src/main/res/layout/fragment_season_details.xml
@@ -32,6 +32,7 @@
             android:layout_marginStart="10dp"
             app:textColor="@color/alabaster"
             app:hideIfValueEmpty="true"
+            app:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/toolbar"
