--- a/app/src/main/res/layout/list_item_poster.xml
+++ b/app/src/main/res/layout/list_item_poster.xml
@@ -9,6 +9,10 @@
             type="String" />
 
         <variable
+            name="vote"
+            type="Double" />
+
+        <variable
             name="url"
             type="com.example.cinemates.data.ConstantsKt" />
 
@@ -17,6 +21,9 @@
     <com.indisparte.posterview.PosterView
         android:layout_width="100dp"
         android:layout_height="150dp"
+        app:imageSrc="@{url.IMAGE_BASE_URL_W780+path}"
         app:posterRadius="8dp"
-        app:imageSrc="@{url.IMAGE_BASE_URL_W780+path}" />
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        app:rating="@{vote!=null?String.valueOf(vote):null}" />
 </layout>
