--- a/RecyclerViewEmptyStateSupport/src/main/res/layout/layout_recyclerview_empty_state.xml
+++ b/RecyclerViewEmptyStateSupport/src/main/res/layout/layout_recyclerview_empty_state.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.indisparte.recyclerviewemptystatesupport.RecyclerViewEmptyState
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
