--- a/RecyclerViewEmptyStateSupport/src/main/res/values/attrs.xml
+++ b/RecyclerViewEmptyStateSupport/src/main/res/values/attrs.xml
@@ -4,6 +4,13 @@
         <attr name="emptyText" format="string" />
         <attr name="emptyTextSize" format="dimension" />
         <attr name="emptyTextColor" format="color"/>
+        <attr name="emptyTextStyle" format="enum">
+            <enum name="normal" value="0" />
+            <enum name="bold" value="1" />
+            <enum name="italic" value="2" />
+            <enum name="bold_italic" value="3" />
+        </attr>
+        <attr name="emptyTextTypeFace" format="string" />
         <attr name="icon" format="reference"/>
     </declare-styleable>
 </resources>
