--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -41,8 +41,8 @@
         android:name="com.example.cinemates.ui.filterable.FilterableFragment"
         tools:layout="@layout/fragment_filterable">
         <argument
-            android:name="filter"
-            app:argType="com.example.cinemates.domain.model.common.Filter" />
+            android:name="movieFilter"
+            app:argType="com.example.cinemates.domain.model.common.MovieFilter" />
     </fragment>
     <dialog
         android:id="@+id/bottomSheetFragment"
