--- a/app/src/main/res/layout/fragment_saved.xml
+++ b/app/src/main/res/layout/fragment_saved.xml
@@ -16,7 +16,7 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            app:menu="@menu/menu_customizable_fragment"
+            app:menu="@menu/search_menu"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/mirage_100"
             app:layout_scrollFlags="scroll|enterAlways" />
