--- a/app/src/main/res/layout/layout_filter_dialog.xml
+++ b/app/src/main/res/layout/layout_filter_dialog.xml
@@ -6,9 +6,44 @@
     android:layout_height="wrap_content"
     android:background="@drawable/dialog_background"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="10dp">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="My custom filter"
+        android:textAlignment="center"
+        android:textColor="@color/geyser"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+    <!--Media type section-->
+    <com.google.android.material.button.MaterialButtonToggleGroup
+        android:id="@+id/media_type_toggle_group"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:checkedButton="@id/movie_button"
+        app:selectionRequired="true"
+        app:singleSelection="true">
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/movie_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Movie"
+            android:textAllCaps="false"
+            app:backgroundTint="@color/mirage_100"
+            app:rippleColor="@color/vermilion_100" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/tv_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Tv"
+            android:textAllCaps="false"
+            app:backgroundTint="@color/mirage_100"
+            app:rippleColor="@color/vermilion_100" />
+
+    </com.google.android.material.button.MaterialButtonToggleGroup>
     <!-- Sort By section -->
     <com.indisparte.horizontalchipview.HorizontalChipView
         android:id="@+id/sort_by"
@@ -37,18 +72,16 @@
         android:textSize="18sp"
         android:textStyle="bold" />
 
-    <Spinner
-        android:id="@+id/year_spinner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp" />
+    <include
+        android:id="@+id/year_filter"
+        layout="@layout/layout_year_filter" />
 
     <!-- Apply button -->
     <com.google.android.material.button.MaterialButton
         android:id="@+id/apply_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:backgroundTint="@color/vermilion_100"
         android:text="Apply"
         android:textAllCaps="false"
