--- a/HorizontalChipView/src/main/res/values/attrs.xml
+++ b/HorizontalChipView/src/main/res/values/attrs.xml
@@ -11,5 +11,8 @@
             <enum name="bold_italic" value="3" />
         </attr>
         <attr name="titleTypeface" format="string" />
+        <attr name="requireSelection" format="boolean"/>
+        <attr name="singleCheck" format="boolean"/>
+        <attr name="selectedChipId" format="reference"/>
     </declare-styleable>
 </resources>
