Improved chip style management
+ Now you can change the style of the chips

--- a/app/src/main/res/layout/fragment_discover.xml
+++ b/app/src/main/res/layout/fragment_discover.xml
@@ -33,7 +33,7 @@
         android:textAllCaps="false"
         android:textColor="@color/geyser"
         android:textSize="14sp"
-        app:cornerRadius="10dp"
+        app:cornerRadius="8dp"
         app:icon="@drawable/ic_outline_search_24" />
 
     <com.google.android.material.button.MaterialButton
@@ -46,8 +46,33 @@
         android:backgroundTint="@color/lynch_100"
         android:text="Custom Filter"
         android:textAllCaps="false"
-        android:textColor="@color/geyser"
-        app:cornerRadius="10dp"
-        app:icon="@drawable/ic_baseline_filter_list_24" />
+        android:textColor="@color/alabaster"
+        app:cornerRadius="8dp"
+        app:icon="@drawable/ic_baseline_filter_list_24"
+        app:iconTint="@color/geyser" />
 
+    <TextView
+        android:id="@+id/general_section"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/custom_filter"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:text="General"
+        android:textColor="@color/alabaster"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/general_section">
+
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/general_group"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clipToPadding="false"
+            app:singleSelection="true"/>
+    </HorizontalScrollView>
 </RelativeLayout>
