--- a/app/src/main/res/layout/layout_filter_dialog.xml
+++ b/app/src/main/res/layout/layout_filter_dialog.xml
@@ -52,6 +52,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:singleCheck="true"
+        app:chipLayout="@layout/filter_chip_layout"
         app:title="Sort by"
         app:titleColor="@color/alabaster"
         app:titleSize="18sp" />
