--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -121,7 +121,7 @@
     </style>
 
 
-    <style name="CustomFilterChipStyle" parent="Widget.MaterialComponents.Chip.Choice">
+    <style name="CustomFilterChipStyle" parent="Widget.MaterialComponents.Chip.Filter">
         <item name="chipBackgroundColor">@color/background_color_chip_state_list</item>
         <item name="chipStrokeColor">@color/royal_blue_100</item>
         <item name="chipStrokeWidth">2dp</item>
