--- a/app/src/main/res/layout/layout_filter_dialog.xml
+++ b/app/src/main/res/layout/layout_filter_dialog.xml
@@ -48,7 +48,6 @@
     <!-- Sort By section -->
     <com.indisparte.horizontalchipview.HorizontalChipView
         android:id="@+id/sort_by"
-        app:chipStyle="@style/CustomFilterChipStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:singleCheck="true"
@@ -60,21 +59,19 @@
     <!-- Genres section -->
     <com.indisparte.horizontalchipview.HorizontalChipView
         android:id="@+id/genres"
-        app:chipStyle="@style/CustomFilterChipStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:singleCheck="false"
+        app:chipLayout="@layout/filter_chip_layout"
         app:title="Genres"
         app:titleColor="@color/alabaster"
         app:titleSize="18sp" />
-
 
     <!-- Year section -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Year"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@color/alabaster"
         android:textSize="18sp"
         android:textStyle="bold" />
