--- a/app/src/main/res/layout/filter_chip_layout.xml
+++ b/app/src/main/res/layout/filter_chip_layout.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <com.google.android.material.chip.Chip xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    app:chipBackgroundColor="@color/background_color_chip_state_list"
+    style="@style/CustomFilterChipStyle"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:text="Chip name"
     android:layout_height="wrap_content" />
