--- a/HorizontalChipView/src/main/res/values/attrs.xml
+++ b/HorizontalChipView/src/main/res/values/attrs.xml
@@ -14,6 +14,6 @@
         <attr name="requireSelection" format="boolean"/>
         <attr name="singleCheck" format="boolean"/>
         <attr name="selectedChipId" format="reference"/>
-        <attr name="chipLayout" format="reference"/>
+        <attr name="chipStyle" format="reference"/>
     </declare-styleable>
 </resources>
