--- a/app/src/main/res/layout/fragment_movie_about.xml
+++ b/app/src/main/res/layout/fragment_movie_about.xml
@@ -44,6 +44,8 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/readMoreTextV"
                 android:padding="10dp"
+                app:singleCheck="true"
+                app:chipStyle="@style/CustomChipChoiceStyle"
                 app:title="Genres"
                 app:titleColor="@color/alabaster"
                 app:titleSize="18sp"
