--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -34,6 +34,9 @@
         <action
             android:id="@+id/action_discoverFragment_to_filterDialogFragment"
             app:destination="@id/filterDialogFragment" />
+        <action
+            android:id="@+id/action_discoverFragment_to_discoverResultFragment"
+            app:destination="@id/discoverResultFragment" />
     </fragment>
     <fragment
         android:id="@+id/savedFragment"
@@ -135,5 +138,10 @@
         tools:layout="@layout/layout_filter_dialog"
         android:name="com.example.cinemates.ui.discover.FilterDialogFragment"
         android:label="FilterDialog" />
+    <fragment
+        android:id="@+id/discoverResultFragment"
+        tools:layout="@layout/fragment_discover_result"
+        android:name="com.example.cinemates.ui.discover.DiscoverResultFragment"
+        android:label="DiscoverResult" />
 
 </navigation>
