--- a/app/src/main/res/layout/layout_filter_dialog.xml
+++ b/app/src/main/res/layout/layout_filter_dialog.xml
@@ -2,9 +2,10 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/design_bottom_sheet"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/translucent_background"
+    android:background="@android:color/transparent"
     android:orientation="vertical"
     android:padding="10dp">
 
